[gd_scene load_steps=5 format=3 uid="uid://5o8s6k2pnsvy"]

[ext_resource type="Script" path="res://scenes/levels/button.gd" id="1_j4nbw"]
[ext_resource type="Texture2D" uid="uid://cnm4qwmvnsjop" path="res://assets/menu/Exit.png" id="2_h0xl2"]
[ext_resource type="Texture2D" uid="uid://2ixnw1qbxivi" path="res://assets/menu/fond text.png" id="3_ek4a0"]
[ext_resource type="Texture2D" uid="uid://c4dnbfymxpi4i" path="res://assets/menu/fond text2.png" id="4_73kf7"]

[node name="Button" type="Node2D"]
z_index = 400
position = Vector2(-2, 143)
scale = Vector2(0.6, 0.6)
script = ExtResource("1_j4nbw")
texture = ExtResource("2_h0xl2")

[node name="TextureButton" type="TextureButton" parent="."]
z_index = 100
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0

[node name="BG" type="Node2D" parent="."]

[node name="Normal" type="Sprite2D" parent="BG"]
visible = false
texture = ExtResource("3_ek4a0")

[node name="Hovered" type="Sprite2D" parent="BG"]
visible = false
texture = ExtResource("4_73kf7")

[connection signal="focus_entered" from="TextureButton" to="." method="_on_texture_button_focus_entered"]
[connection signal="focus_exited" from="TextureButton" to="." method="_on_texture_button_focus_exited"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
